--- a/principal_new.html
+++ b/principal_new.html
@@ -819,9 +819,10 @@ span.hashtag {
 
 
 
-<div class="input-group" style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
+<div class="input-group" >
 
-<div id="estado-servidor_msg"></div>
+
+ <div id="estado-servidor_msg"></div>
 
 
 
