--- a/principal_new.html
+++ b/principal_new.html
@@ -39,14 +39,14 @@
 
  
   /* 🔹 Contenedor NFT */
-  /*#NFT_image-container {
+  #NFT_image-container {
     grid-row: span 2;
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     border: 2px solid white;
     
-  }*/
+  }
 
   /* 🔹 Fila 1 */
   .top-row {
@@ -717,7 +717,7 @@
 <div class="top-bar">
 
   <!-- 🔸 NFT dinámico (reemplaza logo) -->
-  <div id="NFT_image-container"  style=" width:60px;  height: 60px;" ></div>
+  <div id="NFT_image-container"   ></div>
 
   <!-- 🔸 Fila 1 -->
   <div class="top-row">
