--- a/index.html
+++ b/index.html
@@ -273,8 +273,7 @@
 
         alert("Cuenta creada con EXITO");
 
-        const modal = bootstrap.Modal.getInstance(document.getElementById('Modal_crear_cuenta'));
-        modal.hide();
+        $('#Modal_crear_cuenta').modal('hide'); 
         
     }
 
