--- a/principal_new.html
+++ b/principal_new.html
@@ -529,17 +529,17 @@
  <style>
     /* Aquí puedes poner tu CSS personalizado */
     .ql-editor span.emoji {
-      font-size: 2rem; /* Hace los emojis grandes */
+      font-size: 4rem; /* Hace los emojis grandes */
     }
 
     .ql-editor {
       font-size: 18px;
       line-height: 1.6;
-      color: white;
+      color: black;
     }
 
     .ql-toolbar {
-      background: #0a0a0a;
+      background: gray;
       border-radius: 10px;
     }
   </style>
