--- a/principal_new.html
+++ b/principal_new.html
@@ -23,7 +23,7 @@
             height: 100%;
             margin: 0;
             font-family: "Poppins", sans-serif;
-            background: linear-gradient(45deg,var(--fondo_html), var(--fondo_html));
+            background: var(--fondo_html);
         }
 
   /* 🔹 Barra superior azul con 2 filas */
@@ -935,17 +935,8 @@ span.hashtag {
  <div id="barra-progreso-principal"></div>
 
  
- <!--<div class="tab-content" style="border: 0px solid var(--fondo); border-radius: 20px; background:var(--fondo_base);">-->
- <div class="tab-content" 
-     style="
-       width: 100%;
-       height: 100%;
-       border: 0px solid var(--fondo);
-       border-radius: 20px;
-       background: var(--fondo_base);
-       box-sizing: border-box;
-     ">
-</div>
+ <div class="tab-content" style="border: 0px solid var(--fondo); border-radius: 20px; background:var(--fondo_base);">
+
 
 
     <div id="home" class="tab-pane fade in active">
