--- a/principal_new.html
+++ b/principal_new.html
@@ -23,7 +23,7 @@
             height: 100%;
             margin: 0;
             font-family: "Poppins", sans-serif;
-            background: var(--fondo_html);
+            background: linear-gradient(45deg,var(--fondo_html), var(--fondo_html));
         }
 
   /* 🔹 Barra superior azul con 2 filas */
@@ -450,10 +450,7 @@
 
 
 <style>
-        body {
-            font-family: Arial, sans-serif;
-            overflow-x: hidden;
-        }
+        
 
         /* Menú lateral */
         .menu {
