--- a/principal_new.html
+++ b/principal_new.html
@@ -924,7 +924,7 @@ span.hashtag {
 
 
 
-<div class="container-fluid" >
+<div class="container-fluid"  style="border: 0px solid var(--fondo); border-radius: 20px; background:var(--fondo_base);" >
 
 
  <div id="estado-servidor_msg"></div>
