--- a/principal_new.html
+++ b/principal_new.html
@@ -932,7 +932,7 @@ span.hashtag {
  <div id="barra-progreso-principal"></div>
 
  
- <div class="tab-content" style="border: 0px solid var(--fondo); border-radius: 20px; background:var(--fondo_base);">
+ <div class="tab-content" >
 
 
 
