--- a/principal_new.html
+++ b/principal_new.html
@@ -235,7 +235,7 @@
      --basic: lightgray;  
 
      --fondo_html:black;
-     --fondo_base:gray;
+     --fondo_base:black;
      --fondo_post:darkgray;
 
     }
@@ -922,7 +922,7 @@ span.hashtag {
 }
 </style>
 
-
+<br>
 
 <div class="container-fluid"  style="border: 0px solid var(--fondo); border-radius: 20px; background:var(--fondo_base);" >
 
