--- a/principal_new.html
+++ b/principal_new.html
@@ -247,8 +247,8 @@
      --principal: lightblue;
      --basic: gray;  
 
-     --fondo_html:darkblue;
-     --fondo_base:pink;
+     --fondo_html:black;
+     --fondo_base:dodgerblue;
      --fondo_post:lightblue;
 
     }
