--- a/principal_new.html
+++ b/principal_new.html
@@ -346,7 +346,7 @@
   gap: 10px;
   overflow-x: auto;
   padding: 10px;
-  background-color: var(--basic);
+  background-color: var(--fondo_post);
   border-radius: 10px;
   scrollbar-width: thin;
 }
