--- a/principal_new.html
+++ b/principal_new.html
@@ -2250,7 +2250,7 @@ async function inicializarUI() {
     if (list_username.length === 0) {
 
       //poner avatar de la cuenta en pantalla
-      await getAvatarAcount(globalWalletKey,"NFT_image-container");
+      await getImageFromHex(globalWalletKey,"NFT_image-container");
     
     }else{
 
