--- a/principal_new.html
+++ b/principal_new.html
@@ -877,6 +877,17 @@
 
 <!-- 💰 Bloque de saldos -->
 <div class="wallet-container">
+  
+  <div class="wallet-item">
+    <img src="images/icons/btc_coin.SVG" alt="BTC">
+    <div class="wallet-values">
+      <span id="saldo_BTC">0</span>
+      <span id="saldo_USD" class="usd">BTC</span>
+    </div>
+  </div>
+
+
+
   <div class="wallet-item">
     <img src="images/icons/matic_coin.SVG" alt="MATIC">
     <div class="wallet-values">
