--- a/principal_new.html
+++ b/principal_new.html
@@ -879,7 +879,7 @@
 <div class="wallet-container">
   
   <div class="wallet-item">
-    <img src="images/icons/btc_coin.SVG" alt="BTC">
+    <img src="images/icons/btc_icon.SVG" alt="BTC">
     <div class="wallet-values">
       <span id="saldo_BTC">0</span>
       <span id="saldo_USD" class="usd">BTC</span>
