--- a/principal_new.html
+++ b/principal_new.html
@@ -2181,10 +2181,10 @@ async function conectarWalletPropia() {
         return;
     }
 
-    //const alchemyUrl = "https://polygon-mainnet.g.alchemy.com/v2/8gJweGU1u8NB60FICShTvPFy3oUu_zsA";
-    //provider = new ethers.providers.JsonRpcProvider(alchemyUrl);
+    const alchemyUrl = "https://polygon-mainnet.g.alchemy.com/v2/8gJweGU1u8NB60FICShTvPFy3oUu_zsA";
+    provider = new ethers.providers.JsonRpcProvider(alchemyUrl);
 
-    provider = new ethers.providers.JsonRpcProvider("https://polygon-rpc.com");
+    
 
     //const feeData = await provider.getGasPrice();
     //const gasPrice = feeData.gasPrice;
