--- a/principal_new.html
+++ b/principal_new.html
@@ -1009,7 +1009,7 @@ span.hashtag {
 
       <br>
 
-      
+
          <!-- 🔥 Trigger del scroll infinito -->
          <div id="scrollTrigger" style="height: 1px;"></div>
 
@@ -1875,54 +1875,7 @@ function inicializarBarra(pasosTotales) {
 
 
 
-<script>
-          const trigger = document.getElementById("scrollTrigger");
 
-          const observer = new IntersectionObserver(async (entries) => {
-
-              if (entries[0].isIntersecting && !cargando) {
-
-                  cargando = true;
-
-                  console.log("📡 Cargando más...");
-
-                  await cargarPublicacionesAleatorias();
-
-                  cargando = false;
-              }
-
-          }, {
-              root: null,
-              threshold: 1.0
-          });
-
-          observer.observe(trigger);
-          </script>
-
-
-          <script>
-          async function verificarServidor() {
-            fetch('https://api.thesocks.net/is-alive/')
-              .then(response => {
-                if (!response.ok) throw new Error("Respuesta no OK");
-                return response.json();
-              })
-              .then(data => {
-                if (data.alive !== true) throw new Error("Servidor no respondió true");
-                // Servidor está vivo, no hacer nada o puedes actualizar el estado visualmente
-              })
-              .catch(error => {
-                const estadoDiv = document.getElementById('estado-servidor');
-                estadoDiv.innerHTML = '<img src="images/icons/disconnect_icon.svg" alt="Algunas funciones están temporalmente fuera de servicio " width="55px"/>';
-
-                const estadoDiv2 = document.getElementById('estado-servidor_msg');
-                estadoDiv2.innerHTML = '<center><h5><p><font color="red">Algunas funciones están temporalmente fuera de servicio </font></p></h5></center>';
-
-
-              });
-          }
-
-</script>
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
@@ -3259,6 +3212,34 @@ if (/\.(jpeg|jpg|gif|png)$/.test(linkToImage)) {
       document.body.classList.add("tema-" + tema);
     }
   </script>
+
+<script>
+  let cargando = false;
+
+window.addEventListener("scroll", function () {
+
+    if (cargando) return;
+
+    const scrollTop = window.scrollY;
+    const windowHeight = window.innerHeight;
+    const fullHeight = document.documentElement.scrollHeight;
+
+    // Cuando esté a 200px del final
+    if (scrollTop + windowHeight >= fullHeight - 200) {
+
+        cargando = true;
+
+        console.log("Cargando más publicaciones...");
+
+        get_all_publications_home("home-publications-container", true, "last");
+
+        setTimeout(() => {
+            cargando = false;
+        }, 1500);
+    }
+});
+
+</script>
 
 <script src="bootstrap/js/jquery.min.js" ></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
